<resources>
    <string name="app_name">L04-Reservation</string>

    <string name="reservation">Reservation</string>

    <string name="name">Name:</string>
    <string name="namestr">Enter your name</string>

    <string name="phone">Contact No:</string>
    <string name="phonestr">Enter your number</string>

    <string name="pax">Pax Size:</string>
    <string name="paxstr">Enter pax size</string>

    <string name="smoke">Smoking Area</string>
    <string name="reserve">Reserve</string>
    <string name="reset">Reset</string>

</resources>