<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewReservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/reservation"
                android:textAllCaps="true"
                android:textSize="34sp"
                android:typeface="monospace" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="231dp"
                app:srcCompat="@drawable/reservation_icon_29765"
                android:contentDescription="TODO" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="69dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/namestr"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPax"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etContact"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/phonestr"
                    android:inputType="phone"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPax"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pax"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etPax"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/paxstr"
                    android:inputType="phone"
                    android:textColorHint="#757575" />

            </LinearLayout>

            <DatePicker
                android:id="@+id/dpReserve"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TimePicker
                android:id="@+id/tpReserve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>

            <CheckBox
                android:id="@+id/cbSmoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smoke" />

            <Button
                android:id="@+id/btnReserve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reserve" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset" />




        </LinearLayout>
    </ScrollView>

</LinearLayout>
